# ftl-expert-system

./: README.md  pyproject.toml
src/ftl_expert_system/: __init__.py  cli.py  expert.py  metrics.py  multi.py
tests/: test_expert.py  test_metrics.py  test_multi.py
